--- a/functions/package.json
+++ b/functions/package.json
@@ -10,16 +10,20 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "8"
+    "node": "10"
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "~6.0.0",
+    "@slack/client": "^5.0.2",
+    "@slack/events-api": "^2.3.4",
+    "@slack/web-api": "^5.13.0",
+    "firebase-admin": "^9.3.0",
     "firebase-functions": "^2.1.0"
   },
   "devDependencies": {
+    "@types/node": "^14.14.6",
     "tslint": "~5.8.0",
-    "typescript": "~2.8.3"
+    "typescript": "^4.0.5"
   },
   "private": true
 }
