--- a/functions/package.json
+++ b/functions/package.json
@@ -22,9 +22,29 @@
     "firebase-functions": "^2.1.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.6",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.0",
     "tslint": "~5.8.0",
     "typescript": "^4.0.5"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "tsconfig.json"
+      }
+    },
+    "testMatch": [
+      "**/tests/**/*.spec.ts"
+    ]
+  }
 }
