--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,9 @@
     "@slack/client": "^5.0.2",
     "@slack/events-api": "^2.3.4",
     "@slack/web-api": "^5.13.0",
+    "cors": "^2.8.5",
     "dayjs": "^1.9.6",
+    "express": "^4.17.1",
     "firebase-admin": "^9.3.0",
     "firebase-functions": "^2.1.0"
   },
